--- a/Student-Management-SpringBoot-Security/src/main/resources/application.properties
+++ b/Student-Management-SpringBoot-Security/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 # Enabling external DB MySQL 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/student_db
-spring.datasource.username=root
-spring.datasource.password=hM1hM2@123
-
-# Enabling H2 console
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:student_db
-#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/student_db
 #spring.datasource.username=root
-#spring.datasource.password=aM1a2M2@123
+#spring.datasource.password=hM1hM2@123
+
+# Enabling H2 embedded DB
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:student_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=aM1a2M2@123
 
 
 server.servlet.context-path=/StudentManagement
